# search-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILL.md  config.example.toml  install.sh
.beads/: metadata.json
.github/workflows/: release.yml
docs/pr/: 2026-04-reliability-pr-readiness.md
docs/superpowers/plans/: 2026-04-03-email-verify.md
docs/superpowers/specs/: 2026-04-03-email-verify-design.md
src/: cache.rs  classify.rs  cli.rs  config.rs  context.rs  engine.rs  errors.rs  logging.rs  main.rs  types.rs  utils.rs  verify.rs
src/output/: json.rs  mod.rs  table.rs
src/providers/: brave.rs  browserless.rs  exa.rs  firecrawl.rs  jina.rs  mod.rs  parallel.rs  perplexity.rs  serpapi.rs  serper.rs  stealth.rs  tavily.rs  xai.rs  you.rs
tests/: integration.rs
