[package]
name = "agent-search"
version = "0.5.0"
edition = "2021"
description = "Unified multi-provider search CLI for AI agents — 12 providers, 14 modes, email verification, one binary"
license = "MIT"
repository = "https://github.com/199-biotechnologies/search-cli"
homepage = "https://github.com/199-biotechnologies/search-cli"
documentation = "https://github.com/199-biotechnologies/search-cli#readme"
keywords = ["search", "cli", "ai-agent", "meta-search", "web-search"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[[bin]]
name = "search"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
comfy-table = "7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
regex = "1"
async-trait = "0.1"
owo-colors = "4"
indicatif = "0.17"
self_update = { version = "0.43", features = ["rustls"] }
backon = "1"
url = "2.5.8"
mimalloc = "0.1.48"
simd-json = "0.17.0"
rquest = { version = "5", features = ["json", "cookies"] }
rquest-util = "2"
tl = "0.7"
hickory-resolver = { version = "0.25", features = ["tokio"] }
readability = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
